[package]
name = "trusted-properties-marketplace-solana-rust"
description = "Blockchain based decentralized prepaid-rental marketplace. Prepaid rental agreements as smart-contract"
version = "0.0.1"
edition = "2018"

[features]
exclude_entrypoint = []

[dependencies]
solana-program = "1.7.10"
thiserror = "1.0.25"
borsh = "0.9.0"
borsh-derive = "0.9.0"

[dev-dependencies]
solana-program-test = "1.7.10"

[lib]
crate-type = ["cdylib", "lib"]
